v2/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-v2
  labels:
    app: guestbook
    version: "2.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        version: "2.0"
    spec:
      containers:
        - name: guestbook
          image: kota661/guestbook:v2
          ports:
            - name: http-server
              containerPort: 3000
          # env:
          #   - name: REDIS_MASTER_SERVICE_HOST
          #     value: "redis-master"
          #   - name: REDIS_MASTER_SERVICE_PORT
          #     value: "6379"
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
